--- a/Exercicos/ex022/fundo001.html
+++ b/Exercicos/ex022/fundo001.html
@@ -6,8 +6,20 @@
     <title>Testando Imagem de Fundo</title>
 </head>
 <style>
+    body {
+        background-image: url('imagens/wallpaper001.jpg');
+        
+    }
     div.quadrado {
         display: inline-block;
+        border: 1.5px solid black;
+        border-radius: 10px;
+        background-color: lightgray;
+        width: 300px;
+        height: 300px;
+    }
+
+    div#q1 {
         background-color: skyblue;
     }
 
@@ -17,7 +29,7 @@
     }
 
     div#q3 {
-        background-image: url('pattern001.png');
+        background-image: url('imagens/pattern003.png');
     }
 </style>
 <body>  
