--- a/Exercicos/ex022/fundo006.html
+++ b/Exercicos/ex022/fundo006.html
@@ -20,14 +20,15 @@
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
-            border-radius: 15px;
+            border-radius:10px;
         }
+        
     </style>
 </head>
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas repellat esse aliquam voluptatibus facere vero? Veniam reiciendis hic rerum pariatur eos esse ab aut, neque inventore a, iure deserunt consectetur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem explicabo corporis iure maiores, quod accusamus numquam assumenda blanditiis commodi molestiae a laborum suscipit, distinctio ipsam. Porro, numquam praesentium! Voluptatibus, aspernatur!/p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas repellat esse aliquam voluptatibus facere vero? Veniam reiciendis hic rerum pariatur eos esse ab aut, neque inventore a, iure deserunt consectetur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem explicabo corporis iure maiores, quod accusamus numquam assumenda blanditiis commodi molestiae a laborum suscipit, distinctio ipsam. Porro, numquam praesentium! Voluptatibus, aspernatur!/</p>
     </main>
 </body>
 </html>
