--- a/Exercicos/ex022/fundo006.html
+++ b/Exercicos/ex022/fundo006.html
@@ -3,24 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
             height: 100vh;
-            background-color: black;
+           /* background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
-            background-repeat: no-repeat ;
+            background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;*/
+             /*deixar a tela rolando no rundo da pagina*/
+            /*Shortthand - background
+            color > image> position > repeat> [size]
+            > attachment */
+        
+           background: black url('imagens/wallpaper002.jpg') center center no-repeat  fixed;
+           background-size: cover;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
-            border-radius:10px;
+            border-radius: 14px;
         }
         
     </style>
@@ -29,6 +37,7 @@
     <main>
         <h1>Teste de Imagem de Fundo</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas repellat esse aliquam voluptatibus facere vero? Veniam reiciendis hic rerum pariatur eos esse ab aut, neque inventore a, iure deserunt consectetur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem explicabo corporis iure maiores, quod accusamus numquam assumenda blanditiis commodi molestiae a laborum suscipit, distinctio ipsam. Porro, numquam praesentium! Voluptatibus, aspernatur!/</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas repellat esse aliquam voluptatibus facere vero? Veniam reiciendis hic rerum pariatur eos esse ab aut, neque inventore a, iure deserunt consectetur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem explicabo corporis iure maiores, quod accusamus numquam assumenda blanditiis commodi molestiae a laborum suscipit, distinctio ipsam. Porro, numquam praesentium! Voluptatibus, aspernatur!/</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas repellat esse aliquam voluptatibus facere vero? Veniam reiciendis hic rerum pariatur eos esse ab aut, neque inventore a, iure deserunt consectetur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem explicabo corporis iure maiores, quod accusamus numquam assumenda blanditiis commodi molestiae a laborum suscipit, distinctio ipsam. Porro, numquam praesentium! Voluptatibus, aspernatur!/</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas repellat esse aliquam voluptatibus facere vero? Veniam reiciendis hic rerum pariatur eos esse ab aut, neque inventore a, iure deserunt consectetur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem explicabo corporis iure maiores, quod accusamus numquam assumenda blanditiis commodi molestiae a laborum suscipit, distinctio ipsam. Porro, numquam praesentium! Voluptatibus, aspernatur!/</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas repellat esse aliquam voluptatibus facere vero? Veniam reiciendis hic rerum pariatur eos esse ab aut, neque inventore a, iure deserunt consectetur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem explicabo corporis iure maiores, quod accusamus numquam assumenda blanditiis commodi molestiae a laborum suscipit, distinctio ipsam. Porro, numquam praesentium! Voluptatibus, aspernatur!/</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas repellat esse aliquam voluptatibus facere vero? Veniam reiciendis hic rerum pariatur eos esse ab aut, neque inventore a, iure deserunt consectetur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem explicabo corporis iure maiores, quod accusamus numquam assumenda blanditiis commodi molestiae a laborum suscipit, distinctio ipsam. Porro, numquam praesentium! Voluptatibus, aspernatur!/</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas repellat esse aliquam voluptatibus facere vero? Veniam reiciendis hic rerum pariatur eos esse ab aut, neque inventore a, iure deserunt consectetur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem explicabo corporis iure maiores, quod accusamus numquam assumenda blanditiis commodi molestiae a laborum suscipit, distinctio ipsam. Porro, numquam praesentium! Voluptatibus, aspernatur!/</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas repellat esse aliquam voluptatibus facere vero? Veniam reiciendis hic rerum pariatur eos esse ab aut, neque inventore a, iure deserunt consectetur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem explicabo corporis iure maiores, quod accusamus numquam assumenda blanditiis commodi molestiae a laborum suscipit, distinctio ipsam. Porro, numquam praesentium! Voluptatibus, aspernatur!/</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas repellat esse aliquam voluptatibus facere vero? Veniam reiciendis hic rerum pariatur eos esse ab aut, neque inventore a, iure deserunt consectetur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem explicabo corporis iure maiores, quod accusamus numquam assumenda blanditiis commodi molestiae a laborum suscipit, distinctio ipsam. Porro, numquam praesentium! Voluptatibus, aspernatur!/</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas repellat esse aliquam voluptatibus facere vero? Veniam reiciendis hic rerum pariatur eos esse ab aut, neque inventore a, iure deserunt consectetur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem explicabo corporis iure maiores, quod accusamus numquam assumenda blanditiis commodi molestiae a laborum suscipit, distinctio ipsam. Porro, numquam praesentium! Voluptatibus, aspernatur!/</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas repellat esse aliquam voluptatibus facere vero? Veniam reiciendis hic rerum pariatur eos esse ab aut, neque inventore a, iure deserunt consectetur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem explicabo corporis iure maiores, quod accusamus numquam assumenda blanditiis commodi molestiae a laborum suscipit, distinctio ipsam. Porro, numquam praesentium! Voluptatibus, aspernatur!/</p>
     </main>
 </body>
 </html>
