--- a/Exercicos/ex022/fundo007.html
+++ b/Exercicos/ex022/fundo007.html
@@ -12,7 +12,7 @@
             position: relative;
             height: 96vh;
             padding: 10px;
-            background-color: purple;
+            background-color: rgb(145, 15, 145);
             
 
 
